--- a/index.html
+++ b/index.html
@@ -128,6 +128,32 @@
          span.innerHTML = num;
         document.getElementById('sorteio').appendChild(span);         
       }
+
+      function validarCartela(){
+        var cartelas = document.getElementsByTagName('table');
+        for (var i = 0; i < cartelas[0].lenght - 1; i++) {
+          var tr = document.createElement('tr');
+            for (var s = 0; s < cartelas[0].lenght - 1; s++) {
+                var td = document.createElement('td');
+                var numero = Math.floor((Math.random() * 100) +1);
+                var checkCartela = true;
+                
+                while(checkCartela) {
+                  if(cartelaSorteada.includes(numero)) {
+                    numero = Math.floor((Math.random() * 100) +1);
+                  }
+                  else 
+                  {
+                    checkCartela = false;
+                  }
+                }
+                cartelaSorteada.push(numero);
+                td.innerHTML = numero;
+                tr.appendChild(td);
+            };
+            table.appendChild(tr);
+        };
+      }
       // setInterval(sortearNumeros, 2000);
     </script> 
   </body>
